made server working again

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"deta watch dist\"",
     "deploy": "tsc && deta deploy"
   },
   "keywords": [],
@@ -12,12 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
-    "meta": "*",
+    "contracts": "*",
     "cors": "^2.8.5",
     "deta": "^1.0.1",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
-    "img-producer": "*"
+    "color": "^4.2.0",
+    "jimp": "^0.16.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
