--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
-    "meta":"*",
-    "img-producer":"*"
+    "meta":"*"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^7.0.1",
