--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,8 +14,7 @@
     "jimp": "^0.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6",
-    "meta":"*"
+    "react-router-dom": "6"
   },
   "devDependencies": {
     "@typechain/ethers-v5": "^7.0.1",
