--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "ethers": "^5.0.0",
+    "hardhat": "^2.8.3",
     "prettier": "^2.3.2",
     "ts-node": "^10.4.0",
     "typechain": "^5.1.2",
