--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,10 +1,12 @@
 {
   "name": "web",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "git switch production;git merge master;git push;git switch master"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
