--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.3.1",
     "axios": "^0.25.0",
     "jimp": "^0.16.1",
+    "mitt": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6"
