--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "git switch production;git merge master;git push;git switch master"
+    "deploy": "git switch production && git merge master && git push && git switch master"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
