--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,15 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "color": "^4.2.0",
     "contracts": "*",
     "cors": "^2.8.5",
     "deta": "^1.0.1",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
-    "color": "^4.2.0",
     "jimp": "^0.16.1"
   },
   "devDependencies": {
+    "@types/color": "^3.0.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "concurrently": "^7.0.0"
